# softmatch-db

./: .gitignore  PROJECT_LOG.md  README.md  pyproject.toml
bench/: prepare_corpus.py  prepare_fasttext.py  run_bench.py
docs/: SCALING.md  take_screenshots.py
src/softmatch_db/: __init__.py  duckdb_ext.py
src/softmatch_db/core/: __init__.py  beam_search.py  ngram_filter.py  searcher.py  softmin.py  sorted_index.py  zipfian.py
src/softmatch_db/embeddings/: __init__.py  base.py  fasttext_emb.py
src/softmatch_db/index/: __init__.py  builder.py  schema.py
src/softmatch_db/tokenizers/: __init__.py  base.py  mecab_tok.py  sudachi_tok.py  whitespace_tok.py
tests/: conftest.py  test_beam_search.py  test_builder.py  test_cand_next.py  test_integration.py  test_ngram_filter.py  test_perf.py  test_softmin.py  test_sorted_index.py  test_zipfian.py
web/: app.py  build_index.py
web/static/: index.html
