[project]
name = "softmatch-db"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "numpy>=1.26.0",
    "sudachipy>=0.6.8",
    "sudachidict-core>=20240716",
    "huggingface-hub>=0.20.0",
    "pandas>=2.0.0",
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",
    "mecab-python3>=1.0.12",
    "ipadic>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-benchmark>=4.0",
    "psutil>=6.0",
    "datasets>=2.0",
    "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/softmatch_db"]
